--- a/index.html
+++ b/index.html
@@ -13,76 +13,113 @@
   <body>
     <header>
       <img src="logo.png" alt="logo" />
-      <h1>
+      <h1 class="texte-container">
         Rejoignez les courageux pompiers volontaires dans leur mission de
         protection et de service.
       </h1>
     </header>
     <main>
-      <!-- <h2>Dernières actualités</h2>
-    <table>
-        <img src="icon-logo.jpg" alt="icon"/>
-        <h2>Autonomisation des pompiers volontaires</h2>
-        <caption>
-        Publié le 12/12/12
-      </caption>
-      <tr>
-          <th>Découvrez comment nos pompiers volontaires font la différance dans la communauté.</th>
-      </tr>
-      <tr>
-          <td>Lire la suite>></td>
-      </tr>
-    </table>
-    <table>
-        <img src="icon-logo.jpg" alt="icon"/>
-        <h2>Entrainement intensif des pompiers</h2>
-        <caption>
-        Publié le 20/02/13
-      </caption>
-      <tr>
-          <th>Découvrez comment nos pompiers se préparent à affronter les situations d'urgence avec un entrainement intensif.</th>
-      </tr>
-      <tr>
-          <td>Lire la suite>></td>
-      </tr>
-    </table>
-    <img src="icon-logo.jpg" alt="icon"/>
-        <h2>Sécurité incendie en milieu urbain</h2>
-        <caption>
-        Publié le 15/01/13
-      </caption>
-      <tr>
-          <th>Les défis et les solutions pour assurer la sécurité incendie dans la zones urbaines.</th>
-      </tr>
-      <tr>
-          <td>Lire la suite>></td>
-      </tr>
-    </table>
-<img src="icon-logo.jpg" alt="icon"/>
-<h2>Les pompiers volontaires en action</h2>
-<caption>
-Publié le 25/03/13
-</caption>
-<tr>
-  <th>Suivez nos pompiers volontaires dans leurs missions courageuses pour sauver des vies et protéger la communauté.</th>
-</tr>
-<tr>
-  <td>Lire la suite>></td>
-</tr>
-</table>
-    <h2>À la une</h2>
-    <img src="icon-logo.jpg" alt="icon"/>
-    <h2>Sécurité incendie en milieu urbain</h2>
-    <caption>
-    Publié le 15/01/13
-  </caption>
-  <tr>
-      <th>Les défis et les solutions pour assurer la sécurité incendie dans la zones urbaines.</th>
-  </tr>
-  <tr>
-      <td>Lire la suite>></td>
-  </tr>
-</table> -->
+      <div class="container">
+        <!-- Section "Dernières actualités" -->
+        <div class="news-section-wrapper">
+          <h2 class="news-section-title">Dernières actualités</h2>
+          <ul class="news-section">
+            <li class="news-item">
+              <img src="icon-logo.jpg" alt="Icone" />
+              <div class="news-content">
+                <h3>Autonomisation des pompiers volontaires</h3>
+                <p>Publié le 12/12/12</p>
+                <p>
+                  Découvrez comment nos pompiers volontaires font la différence
+                  dans la communauté.
+                </p>
+                <a href="#">Lire la suite >></a>
+              </div>
+            </li>
+            <li class="news-item">
+              <img src="icon-logo.jpg" alt="Icone" />
+              <div class="news-content">
+                <h3>Sécurité incendie en milieu urbain</h3>
+                <p>Publié le 15/01/13</p>
+                <p>
+                  Les défis et les solutions pour assurer la sécurité incendie
+                  dans les zones urbaines.
+                </p>
+                <a href="#">Lire la suite >></a>
+              </div>
+            </li>
+            <li class="news-item">
+              <img src="icon-logo.jpg" alt="Icone" />
+              <div class="news-content">
+                <h3>Entraînement intensif des pompiers</h3>
+                <p>Publié le 20/02/13</p>
+                <p>
+                  Découvrez comment nos pompiers se préparent à affronter les
+                  situations d’urgence.
+                </p>
+                <a href="#">Lire la suite >></a>
+              </div>
+            </li>
+            <li class="news-item">
+              <img src="icon-logo.jpg" alt="Icone" />
+              <div class="news-content">
+                <h3>Les pompiers volontaires en action</h3>
+                <p>Publié le 25/03/13</p>
+                <p>
+                  Suivez nos pompiers dans leurs missions courageuses pour
+                  protéger la communauté.
+                </p>
+                <a href="#">Lire la suite >></a>
+              </div>
+            </li>
+          </ul>
+        </div>
+
+        <!-- Section "À la une" -->
+        <section class="section">
+          <h2 class="news-section-title">À la une</h2>
+          <ul>
+            <li class="news-item">
+              <div class="card">
+                <img src="fireman1.jpg" alt="Icone" />
+                <div class="news-content">
+                  <h3>Les pompiers courageux</h3>
+                  <p>
+                    Découvrez les histoires incroyables de nos pompiers à la
+                    une.
+                  </p>
+                  <a href="#">Lire la suite >></a>
+                </div>
+              </div>
+            </li>
+            <li class="news-item">
+              <div class="card">
+                <img src="fireman3.jpg" alt="Icone" />
+                <div class="news-content">
+                  <h3>Prévention des incendies domestiques</h3>
+                  <p>
+                    Conseils et astuces pour prévenir les incendies domestiques.
+                  </p>
+                  <a href="#">Lire la suite >></a>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </section>
+      </div>
+      <p class="container2">Galerie</p>
+      <div class="container2">
+        <div class="card2"><img src="fireman1.jpg" alt="fireman" /></div>
+        <div class="card2"><img src="fireman2.jpg" alt="fireman" /></div>
+        <div class="card2"><img src="fireman3.jpg" alt="fireman" /></div>
+      </div>
+
+      <p class="container">Connectez-vous avec nous</p>
+      <div class="container2">
+        <a class="card2" href="#">Twitter</a>
+        <a class="card2" href="#">Facebook</a>
+        <a class="card2" href="#">Google+</a>
+      </div>
     </main>
   </body>
 </html>
