--- a/index.html
+++ b/index.html
@@ -107,19 +107,29 @@
           </ul>
         </section>
       </div>
-      <p class="container2">Galerie</p>
-      <div class="container2">
-        <div class="card2"><img src="fireman1.jpg" alt="fireman" /></div>
-        <div class="card2"><img src="fireman2.jpg" alt="fireman" /></div>
-        <div class="card2"><img src="fireman3.jpg" alt="fireman" /></div>
-      </div>
+      <section class="section2">
+        <p class="title">Galerie</p>
+        <div class="content-wrapper">
+          <!-- Section Galerie -->
+          <!-- <div class="container2"> -->
+          <div class="gallery">
+            <div class="card2"><img src="fireman1.jpg" alt="fireman" /></div>
+            <div class="card2"><img src="fireman2.jpg" alt="fireman" /></div>
+            <div class="card2"><img src="fireman3.jpg" alt="fireman" /></div>
+          </div>
+          <!-- </div> -->
 
-      <p class="container">Connectez-vous avec nous</p>
-      <div class="container2">
-        <a class="card2" href="#">Twitter</a>
-        <a class="card2" href="#">Facebook</a>
-        <a class="card2" href="#">Google+</a>
-      </div>
+          <!-- Section Réseaux sociaux -->
+          <div class="social-wrapper">
+            <p class="gallery2">Connectez-vous avec nous</p>
+            <!-- <div class="gallery"> -->
+            <a href="#">Twitter</a>
+            <a href="#">Facebook</a>
+            <a href="#">Google+</a>
+          </div>
+          <!-- </div> -->
+        </div>
+      </section>
     </main>
   </body>
 </html>
